Added extra example environment variables

--- a/.env.example
+++ b/.env.example
@@ -1,1 +1,2 @@
-FILE_PATH = "Your file path here"
+AUDIO_DATA_WAKEWORD_FILE_PATH = "./audio_files/wakeword"
+AUDIO_DATA_BACKGROUND_FILE_PATH = "./audio_files/background"
