--- a/requirements.txt
+++ b/requirements.txt
@@ -1,2 +1,8 @@
+librosa==0.11.0
+matplotlib==3.10.6
+numpy>=1.26.0
+pandas==2.3.2
+python-dotenv==1.0.1
 scipy==1.16.2
 sounddevice==0.5.2
+soundfile==0.12.1
